@@ -1043,7 +1043,11 @@
 # transparency support. As with the "banner" setting below, paths
 # are relative to the directory containing the RefindPlus efi.
 #
-# Uses default selection background images when commented out
+# NB: The file used for 'selection_small' must be no larger
+# than 256px on the longest side while that used as the
+# 'selection_big' image must be no larger than 320px.
+#
+# Uses default selection images when commented out
 #
 #selection_big icons/selection-big.png
 #selection_small icons/selection-small.png
